--- a/report.ipynb
+++ b/report.ipynb
@@ -53,17 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tempi e risultati |            |                |                |                |                |\n",
-    "|--------------|-----------------|----------------|----------------|----------------|----------------|\n",
-    "|              |                 | Held e Karp    |                | Header 3       |        <       |\n",
-    "|              | Soluzione       | Tempo          | Errore         | Subheader 3.1  | Subheader 3.2  |\n",
-    "|==============|-----------------|----------------|----------------|----------------|----------------|\n",
-    "| burma14.tsp  | 3row, 3col span |       <        |        <       | Colspan only   |        <       |\n",
-    "| ulysses16.tsp|       ^         |       <        |        <       | Rowspan only   | Cell           |\n",
-    "| ulysses22.tsp|       ^         |       <        |        <       |       ^        | Cell           |\n",
-    "| eil51.tsp    |  Row            |  Each cell     |:   Centered   :| Right-aligned :|: Left-aligned  |\n",
-    "|.            .|. with multiple .|. has room for .|.  multi-line  .|.   multi-line .|. multi-line   .|\n",
-    "|.            .|. lines.        .|. more text.   .|.     text.    .|.        text. .|. text.        .|"
+    "<img src=\"Tabella.png\" width=850 height=800 />"
    ]
   },
   {
