--- a/report.ipynb
+++ b/report.ipynb
@@ -131,6 +131,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "burma14.tsp\n",
+      "{'NAME': 'burma14', 'TYPE': 'TSP', 'COMMENT': '14-Staedte in Burma (Zaw Win)', 'DIMENSION': '14', 'EDGE_WEIGHT_TYPE': 'GEO', 'EDGE_WEIGHT_FORMAT': 'FUNCTION', 'DISPLAY_DATA_TYPE': 'COORD_DISPLAY'}\n",
+      "1 2 8 11 9 10 13 7 12 4 6 5 14 3 \n",
+      "4003\n"
+     ]
+    }
+   ],
+   "source": [
+    "import utilities as ut\n",
+    "import approx as ap #funzioni di supporto\n",
+    "import Prim as pr #funzioni per il calcolo dell'mst con algortmo di Prim\n",
+    "\n",
+    "def approx(file_name, root):\n",
+    "\n",
+    "    mst, matrix= pr.Prim(file_name, root) \n",
+    "    n= len(mst)\n",
+    "    \n",
+    "    #aggiungi lista figli\n",
+    "    for i in range(0, n):\n",
+    "        if mst[i].pi!=None:\n",
+    "            r=int(mst[i].pi)\n",
+    "            mst[r].child.append(i)\n",
+    "            \n",
+    "    H=[]\n",
+    "    ap.Preorder(mst, root, H)\n",
+    "\n",
+    "    total=0\n",
+    "    #calcolo costo totale\n",
+    "    for i in range(0, n-1):\n",
+    "        total+= matrix[H[i], H[i+1]]\n",
+    "    #aggiunta ultimo arco\n",
+    "    total+= matrix[H[n-1], H[0]]\n",
+    "\n",
+    "    return H, total\n",
+    "\n",
+    "H, total= approx('burma14.tsp', 0) #parte dal nodo 1 del grafo che nella nostra codifica è 0\n",
+    "ap.printH(H)\n",
+    "print(total)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
