--- a/report.ipynb
+++ b/report.ipynb
@@ -18,9 +18,43 @@
     "\n",
     "Per la rappresentazione dei grafi abbiamo utilizzato una matrice di adiacenza *n x n*, con n numero totale di nodi. Nella posizione *( i , j )* della matrice troviamo il peso dell'arco che collega il nodo *i* con il nodo *j*\n",
     "se esiste tale arco altrimento troviamo il valore *null*. <br/>\n",
-    "Abbiamo deciso di utilizzare la matrice di adiacenza perché il problema del commesso viaggiatore viene rappresentato con un grafo non orientato, pesato e completo G = (V,E) dove i vertici sono le città ed il peso dell’arco {u,v} è uguale alla distanza da u a v. Attraverso la matrice quindi è stato più facile rappresentare un grafo completo e accedere al peso degl'archi in tempo costante senza scorrere una lista di adiacenza. <br/>\n",
-    "Le funzioni per il calcolo delle distanze e la creazione delle matrici sono le stesse per tutti gli algoritmi da noi  implementati <br/> ##### aggiungere qualcosa per sul parseFile? ########### <br/>\n",
+    "Abbiamo deciso di utilizzare la matrice di adiacenza dato che il problema del commesso viaggiatore viene rappresentato con un grafo non orientato, pesato e completo G = (V,E) dove i vertici sono le città ed il peso dell’arco {u,v} è uguale alla distanza da u a v. Attraverso la matrice quindi è stato più facile rappresentare un grafo completo e accedere al peso degl'archi in tempo costante senza scorrere una lista di adiacenza. <br/>\n",
+    "La funzione per il calcolo delle distanze e la creazione delle matrici sono le stesse per tutti gli algoritmi da noi  implementati, prende in input il nome del file e in base al formato crea la matrice, come l'esempio riportato sotto. <br/> ##### aggiungere qualcosa per sul parseFile? ########### <br/>\n",
     "Per quanto riguarda le euristiche costruttive abbiamo deciso di svolgere sia la *Closest Insertion* che la *Farthest Insertion* dato che differenziano solo nella fase di selezione, in cui la prima minimizza il valore *δ(k,C)* mentre la seconda lo massimizza. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'NAME': 'burma14', 'TYPE': 'TSP', 'COMMENT': '14-Staedte in Burma (Zaw Win)', 'DIMENSION': '14', 'EDGE_WEIGHT_TYPE': 'GEO', 'EDGE_WEIGHT_FORMAT': 'FUNCTION', 'DISPLAY_DATA_TYPE': 'COORD_DISPLAY'}\n",
+      "[[   1  153  510  706  966  581  455   70  160  372  157  567  342  398]\n",
+      " [ 153    1  422  664  997  598  507  197  311  479  310  581  417  376]\n",
+      " [ 510  422    1  289  744  390  437  491  645  880  618  374  455  211]\n",
+      " [ 706  664  289    1  491  265  410  664  804 1070  768  259  499  310]\n",
+      " [ 966  997  744  491    1  400  514  902  990 1261  947  418  635  636]\n",
+      " [ 581  598  390  265  400    1  168  522  634  910  593   19  284  239]\n",
+      " [ 455  507  437  410  514  168    1  389  482  757  439  163  124  232]\n",
+      " [  70  197  491  664  902  522  389    1  154  406  133  508  273  355]\n",
+      " [ 160  311  645  804  990  634  482  154    1  276   43  623  358  498]\n",
+      " [ 372  479  880 1070 1261  910  757  406  276    1  318  898  633  761]\n",
+      " [ 157  310  618  768  947  593  439  133   43  318    1  582  315  464]\n",
+      " [ 567  581  374  259  418   19  163  508  623  898  582    1  275  221]\n",
+      " [ 342  417  455  499  635  284  124  273  358  633  315  275    1  247]\n",
+      " [ 398  376  211  310  636  239  232  355  498  761  464  221  247    1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import utilities as ut\n",
+    "#### lettura file burma14.tsp e creazione matrice ##########\n",
+    "matrix=ut.parseFile('burma14.tsp')\n",
+    "print(matrix)"
    ]
   },
   {
@@ -237,12 +271,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'euristica costruttiva *Farthest Insertion* in tutte le sue fasi si comporta come la precedente euristica tranne nella *selezione* che massimizza il valore *δ(k,C)* cioè seleziona il vertice *k* non ancora all'interno del circuito parziale *C* che massimizza la distanza da quest'ultimo. La *selezione* viene eseguita (n-1) volte per inserire tutti i vertici del grafo nel circuito parziale *C* che poi alla fine dell'algoritmo risulterà il ciclo Hamiltoniano per il grafo in input."
+    "L'euristica costruttiva *Farthest Insertion* , come la precedente, è composta da 3 fasi:\n",
+    "Inizializzazione, Selezione, Inserimento. Le ultime due fasi vengono ripetute finchè il ciclo Hamiltoniano non è stato completato. Mentre l'Inizializzazione e l'Inserimento risultano essere uguali a *Closest Insertion*, la Selezione è opposta cioè viene massimizzato il valore *δ(k,C)*. Attraverso la massimizzazione viene selezionato il vertice *k* non ancora all'interno del circuito parziale *C* che massimizza la distanza da quest'ultimo. <br/>\n",
+    "La selezione viene eseguita *( n - 1 )* volte per inserire tutti i vertici del grafo nel circuito parziale *C* che poi alla fine dell'algoritmo risulterà il ciclo Hamiltoniano per il grafo in input.\n",
+    "<br/> Complessità: <br/>\n",
+    "* *Inizializzazione* Ѳ(n), scorrimento di tutta la matrice alla riga 0 per trovare il minimo arco e quindi il vertice più vicino <br/>\n",
+    "* *Selezione* dato s numero elementi in *C* circuito parziale e *Ѳ(s)* il costo computazionale per il calcolo di *δ(k,C)*, in totale abbiamo una complessità *Ѳ((n-s) x s)* e viene eseguita (n-1) volte. <br/>\n",
+    "* *Inserimento* dato s numero elementi in *C* circuito parziale abbiamo *Ѳ(s)* <br/> \n",
+    "\n",
+    "In totale quindi abbiamo una complessità quasi quadratica, infatti si può notare che nei grafi più grandi, da 442 nodi in su, il tempo impiegato dall'algoritmo cresce molto velocemente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +292,6 @@
      "output_type": "stream",
      "text": [
       "{'NAME': 'burma14', 'TYPE': 'TSP', 'COMMENT': '14-Staedte in Burma (Zaw Win)', 'DIMENSION': '14', 'EDGE_WEIGHT_TYPE': 'GEO', 'EDGE_WEIGHT_FORMAT': 'FUNCTION', 'DISPLAY_DATA_TYPE': 'COORD_DISPLAY'}\n",
-      "13\n",
       "11 9 10 1 2 14 3 4 5 6 12 7 13 8 \n",
       "3323\n"
      ]
@@ -303,7 +344,6 @@
     "        k=fr.selezione(V,C,matrix)\n",
     "        \n",
     "    totale=fr.calcTot(C, matrix)\n",
-    "    print(count)\n",
     "    return C, totale #return ciclo e soluzione finale\n",
     "\n",
     "ciclo, tot= farthest('burma14.tsp')\n",
@@ -316,6 +356,14 @@
    "metadata": {},
    "source": [
     "## 4. Algoritmo 2-approssimato"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il calcolo dell'mst viene eseguito tramite l'algoritmo di Prim, implementato con heap binario, che prende in input il nome del file e la radice da cui far partire l'algoritmo. I risultati ottenuti risultanno diversi in base alla scelta del nodo che utilizziamo per la partenza del ciclo Hamiltoniano. Mentre il minimo albero ricoprente è sempre lo stesso indipendentemente dal nodo di partenza, quando trasformiamo l'albero in ciclo Hamiltoniano il nodo da cui partiamo gioca un ruolo importante. Per trovare il risultato migliore, infatti, abbiamo testato l'algoritmo su tutti i nodi del grafo per ogni istanza. Nell'esempio che riportiamo sotto possiamo notare che otteniamo il risultato migliore con il nodo 6. <br/>\n",
+    "Il costo computazionale dell'algoritmo è la somma del costo di Prim *0( m log n )* e della visita anticipata Ѳ(m),  quindi *O( m log n + m)*."
    ]
   },
   {
@@ -341,17 +389,20 @@
     "\n",
     "def approx(file_name, root):\n",
     "\n",
+    "    #colcalo l'mst con l'algortimo di Prim, mi restituisce:\n",
+    "    #la matrice creata al suo interno, l'mst finale e l'ordine dei nodi estratti\n",
     "    mst, matrix, extract= pr.Prim(file_name, root) \n",
     "    n= len(mst)\n",
     "    \n",
-    "    #aggiungi lista figli\n",
+    "    #per ogni nodo aggiungiamo la lista dei suoi figli secondo l'ordine di estrazione di Prim\n",
     "    for i in range(0, len(extract)):\n",
     "        j=extract[i]\n",
     "        if mst[j].pi!=None:\n",
     "            r=int(mst[j].pi)\n",
     "            mst[r].child.append(j)\n",
     "            \n",
-    "    H=[]\n",
+    "    H=[] \n",
+    "    #visita anticipata dell'albero, per inserire tutti i nodi in H\n",
     "    ap.Preorder(mst, root, H)\n",
     "\n",
     "    total=0\n",
@@ -362,8 +413,9 @@
     "    total+= matrix[H[n-1], H[0]]\n",
     "\n",
     "    return H, total\n",
-    "\n",
-    "H, total= approx('burma14.tsp', 5) #parte dal nodo 1 del grafo che nella nostra codifica è 0\n",
+    "#parte dal nodo 6 del grafo che nella nostra codifica è 5, con questo nodo abbiamo il miglior\n",
+    "#risultato per burma14.tsp\n",
+    "H, total= approx('burma14.tsp', 5)\n",
     "ap.printH(H)\n",
     "print(total)"
    ]
@@ -379,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nella tabella seguente vengono messe a confronto le soluzioni, il tempo impiegato in secondi e l'errore rispetto alla soluzione ottime di tutti gli algoritmi da noi implementati. <br/>\n",
+    "Nella tabella seguente vengono messe a confronto le soluzioni, il tempo impiegato in secondi e l'errore rispetto alle soluzioni ottime di tutti gli algoritmi da noi implementati. <br/>\n",
     "Per l'algoritmo 2-approssimato è stata aggiunta la colonna *Soluzione migliore* e *Soluzione media*, la prima rappresenta la soluzione migliore trovata mentre la seconda rappresenta la media delle soluzioni trovate calcolate su tutti i nodi del grafo. Possiamo osservare un'ampia differenza tra i due valori, quindi la scelta del nodo da cui far iniziare l'algoritmo 2-approssimato porta a risultati molto diversi tra loro che si avvicinano o meno alla soluzione ottima."
    ]
   },
@@ -394,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Di seguito è riportato un grafico in cui vengono confrontati i diversi errori prodotti dalle due diverse euristiche e  dall'algoritmo 2-approssimato nel calcolo del Travelling Salesman Problem.<br/>\n",
+    "Di seguito è riportato un grafico in cui vengono confrontati gli errori prodotti dalle due diverse euristiche e  dall'algoritmo 2-approssimato nel calcolo del Travelling Salesman Problem.<br/>\n",
     "Come possiamo osservare dal grafico le euristiche hanno un errore decisamente più basso tranne le istanze più piccole, fino a 22 nodi, in cui le differenze sono inferiori."
    ]
   },
@@ -410,6 +462,31 @@
    "metadata": {},
    "source": [
     "## 6. Conclusioni"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dal capitolo precedente possiamo osservare come il calcolo della soluzione esatta tramite Held & Karp sia troppo oneroso già con 22 nodi e praticamente inutilizzabile per i rimanenti grafi. <br/>\n",
+    "Le due eristiche producono le migliori soluzioni approssimate con un errore medio circa del 10% tuttavia man mano che aumenta la dimensione del grafo il tempo impiegato risulta elevato (con 1000 nodi impiega più di 2 minuti). <br/>\n",
+    "Viceversa l'algoritmo 2-approssimato mantiene i tempi molto più bassi (un secondo nel caso peggiore) ma le soluzioni trovate hanno un errore più elevato. Inoltre risulta casuale in quanto la scelta del nodo da cui iniziare determina il risultato stesso. Per trovare il risultato migliore abbiamo dovuto testare l'algoritmo su tutti i nodi del grafo. <br/>\n",
+    "Tutto questo ci fa intuire che non esiste un algoritmo migliore dell'altro ma dobbiamo scegliere l'algoritmo in base alle priorità che ci poniamo cioè secondo il tempo o alla soluzione che vogliamo ottenere. <br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Di seguito riportiamo graficamente i diversi cicli Hamiltoniani creati da ogni algoritmo. <br/>\n",
+    "Possiamo osservare, nel caso di \"burma14.tsp\", che i cicli creati da Held & Karp e Farthest Insertion risultano diversi anche se il costo totale del ciclo è lo stesso, come riportato nella tabella."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1 Burma14"
    ]
   },
   {
@@ -1852,6 +1929,13 @@
     "# draw.drawPath('burma14.tsp', pathburmaclosest)\n",
     "# draw.drawPath('burma14.tsp', pathburmaheld)\n",
     "# draw.drawPath('burma14.tsp', path2approx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.2 Berlin52"
    ]
   },
   {
@@ -4503,6 +4587,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.3 Ulysses22"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -6357,13 +6448,6 @@
     "\n",
     "draw.drawPath('ulysses22.tsp', k)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
