--- a/report.ipynb
+++ b/report.ipynb
@@ -19,7 +19,8 @@
     "Per la rappresentazione dei grafi abbiamo utilizzato una matrice di adiacenza *n x n*, con n numero totale di nodi. Nella posizione *( i , j )* della matrice troviamo il peso dell'arco che collega il nodo *i* con il nodo *j*\n",
     "se esiste tale arco altrimento troviamo il valore *null*. <br/>\n",
     "Abbiamo deciso di utilizzare la matrice di adiacenza dato che il problema del commesso viaggiatore viene rappresentato con un grafo non orientato, pesato e completo G = (V,E) dove i vertici sono le città ed il peso dell’arco {u,v} è uguale alla distanza da u a v. Attraverso la matrice quindi è stato più facile rappresentare un grafo completo e accedere al peso degl'archi in tempo costante senza scorrere una lista di adiacenza. <br/>\n",
-    "La funzione per il calcolo delle distanze e la creazione delle matrici sono le stesse per tutti gli algoritmi da noi  implementati, prende in input il nome del file e in base al formato crea la matrice, come l'esempio riportato sotto. <br/> ##### aggiungere qualcosa per sul parseFile? ########### <br/>\n",
+    "La conversione delle coordinate viene eseguita automaticamente all'interno del parser che analizza l'header dei dataset e decide se è necessaria o meno. <br/>\n",
+    "La funzione per il calcolo delle distanze e la creazione delle matrici sono le stesse per tutti gli algoritmi da noi  implementati, prende in input il nome del file e in base al formato crea la matrice, come l'esempio riportato sotto.\n",
     "Per quanto riguarda le euristiche costruttive abbiamo deciso di svolgere sia la *Closest Insertion* che la *Farthest Insertion* dato che differenziano solo nella fase di selezione, in cui la prima minimizza il valore *δ(k,C)* mentre la seconda lo massimizza. "
    ]
   },
@@ -69,29 +70,33 @@
    "metadata": {},
    "source": [
     "Nell'implementare l'algoritmo di Held e Karp è stata utilizzata la codifica binaria degli insiemi S di nodi attraversati, ad esempio il set {1,2,3,4} può essere codificato in questo modo 2^1 + 2^3 + 2^2 + 2^4 = 0b11110, con le operazioni di bitshift è facilmente implementabile. \\n \n",
-    "L'algoritmo applica una ricerca in profondità a partire dal nodo 0."
+    "L'algoritmo applica una ricerca in profondità a partire dal nodo 0, e salva progressivamente i risultati parziali ottenuti all'interno dei dizionari {dist} e {py}, se deve accedere alle informazioni di un percorso controlla prima se è già stato calcolato, in caso contrario provvede a calcolarlo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "{'NAME': 'burma14', 'TYPE': 'TSP', 'COMMENT': '14-Staedte in Burma (Zaw Win)', 'DIMENSION': '14', 'EDGE_WEIGHT_TYPE': 'GEO', 'EDGE_WEIGHT_FORMAT': 'FUNCTION', 'DISPLAY_DATA_TYPE': 'COORD_DISPLAY'}\nheldkarp:  ([1, 10, 9, 11, 8, 13, 7, 12, 6, 5, 4, 3, 14, 2], 3323)\n"
+     "text": "{'NAME': 'berlin52', 'TYPE': 'TSP', 'COMMENT': '52 locations in Berlin (Groetschel)', 'DIMENSION': '52', 'EDGE_WEIGHT_TYPE': 'EUC_2D'}\nTIMEOUT\nheldkarp:  ([], 18941.030042609502)\n"
     }
    ],
    "source": [
     "import utilities as ut\n",
+    "import time\n",
     "\n",
+    "timeout=False\n",
     "#versione ricorsiva dell'algoritmo di herld e karp\n",
     "#riceve una matrice delle distanze e ritorna il percorso circolare minore che attraversa tutti i nodi una sola volta\n",
     "def calcHeldKarpRecursiveVersion(dmatrix):\n",
+    "    timeinit = time.time()\n",
     "    dim = len(dmatrix)\n",
     "    dist = {}\n",
     "    py = {}   \n",
+    "    global timeout\n",
     "    \n",
     "    #funzione ricorsiva che deve essere chiamata\n",
     "    def HK_Visit(v, S):\n",
@@ -106,7 +111,7 @@
     "\n",
     "        else:\n",
     "            mindist = 2147483647\n",
-    "            minprec = -1\n",
+    "            minprec = None\n",
     "\n",
     "            # questa operazione rimuove il nodo v dall'insieme S, convertendo il bit in posizione v da 1 a 0 \n",
     "            prevsub = S & ~ (1 << v)\n",
@@ -116,11 +121,16 @@
     "            for u in listanodi:\n",
     "                #chiamata ricorsiva\n",
     "                distance = HK_Visit(u, prevsub)\n",
-    "\n",
     "                if distance + dmatrix[u,v] < mindist:\n",
     "                    mindist = distance + dmatrix[u,v]\n",
     "                    #print(v, encToList(S))\n",
     "                    minprec = u\n",
+    "                #controllo se devo andare in timeout\n",
+    "                if time.time() > timeinit + 300:\n",
+    "                    #print('timeout')\n",
+    "                    global timeout\n",
+    "                    timeout = True\n",
+    "                    break\n",
     "            \n",
     "            #salvo i risultati parziali dentro le strutture dati\n",
     "            dist[v,S] = mindist\n",
@@ -133,14 +143,20 @@
     "        percorso = []\n",
     "        k=0\n",
     "        S=2**dim-1\n",
-    "        while len(percorso) < len(dmatrix)-1:\n",
-    "            temp = py[(k,S)]\n",
-    "            percorso.append(temp)\n",
-    "            S = S & ~ (1 << k)\n",
-    "            k = temp\n",
+    "        global timeout\n",
+    "        #se sono andato in timeout non ricostruisco il percorso completo\n",
+    "        if timeout == True:\n",
+    "            print('TIMEOUT')\n",
+    "            return []\n",
+    "        else:    \n",
+    "            while len(percorso) < len(dmatrix)-1:\n",
+    "                temp = py[(k,S)]\n",
+    "                percorso.append(temp)\n",
+    "                S = S & ~ (1 << k)\n",
+    "                k = temp\n",
     "        \n",
     "        #aggiungo l'ultimo arco che chiude il percorso\n",
-    "        percorso.append(0)\n",
+    "            percorso.append(0)\n",
     "        \n",
     "        return percorso\n",
     "\n",
@@ -161,7 +177,7 @@
     "        num += 1\n",
     "    return sett\n",
     "\n",
-    "a = ut.parseFile('burma14.tsp')\n",
+    "a = ut.parseFile('berlin52.tsp')\n",
     "print('heldkarp: ', calcHeldKarpRecursiveVersion(a))"
    ]
   },
